--- a/Assignment No 4/ass4-app/src/app/registration/registration.component.html
+++ b/Assignment No 4/ass4-app/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: #f4f4f4;"> 
-    <div style="border: 2px solid black; width: 350px; padding: 20px; border-radius: 10px; background: white; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);">
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: #ada1ce;"> 
+    <div style="border: 2px solid black; width: 350px; padding: 20px; border-radius: 10px; background: rgb(59, 145, 177); box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);">
       <form action="" onsubmit="return validateForm()">
         <h1 style="text-align: center; font-size: 22px; color: #333;">Registration Form</h1>
         
